<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sitio1"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:layout_marginTop="10dp"
            android:typeface="monospace"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_sitio1"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/sitio1"
            android:textColor="@color/black"
            android:typeface="monospace"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sitio2"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:layout_marginTop="10dp"
            android:typeface="monospace"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_sitio2"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/sitio2"
            android:textColor="@color/black"
            android:typeface="monospace"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sitio3"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:layout_marginTop="10dp"
            android:typeface="monospace"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion_sitio3"
            android:textSize="15dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/sitio3"
            android:textColor="@color/black"
            android:typeface="monospace"/>






    </LinearLayout>



</ScrollView>

