<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/actividad1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paraiso"
        android:textSize="18dp"
        android:layout_marginLeft="20dp"
        android:typeface="monospace"
        android:textColor="@color/black"
        android:layout_marginTop="440dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guatape"
        android:layout_gravity="center"
        android:textSize="40dp"
        android:textColor="@color/whitesmoke"
        android:typeface="monospace"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zocalos"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:typeface="monospace"
        android:textColor="@color/black"
       />




</LinearLayout>